--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,164 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        >
 
 
-    <Button
-        android:text="DisConnect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/btn_connect"
-        android:layout_toRightOf="@+id/btn_connect"
-        android:layout_toEndOf="@+id/btn_connect"
-        android:id="@+id/btn_disconnect" />
+        <Button
+            android:text="DisConnect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/btn_connect"
+            android:layout_toRightOf="@+id/btn_connect"
+            android:layout_toEndOf="@+id/btn_connect"
+            android:id="@+id/btn_disconnect" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/edit_ip"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:hint="IP"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/edit_ip"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:hint="IP"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:inputType="text" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/edit_port"
-        android:layout_below="@+id/edit_ip"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:hint="Port" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/edit_port"
+            android:layout_below="@+id/edit_ip"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:hint="Port" />
 
-    <Button
-        android:text="connect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_connect"
-        android:layout_below="@+id/edit_port"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <Button
+            android:text="connect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_connect"
+            android:layout_below="@+id/edit_port"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <Button
-        android:text="Remote Start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_disconnect"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="11dp"
-        android:id="@+id/btn_start" />
-</RelativeLayout>
+        <Button
+            android:text="Remote Start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_disconnect"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="11dp"
+            android:id="@+id/btn_start" />
+
+        <Button
+            android:text="Get Vehicle Info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/btn_start"
+            android:layout_toRightOf="@+id/btn_start"
+            android:layout_toEndOf="@+id/btn_start"
+            android:id="@+id/btn_get_vehicle_info" />
+
+        <Button
+            android:text="Get Vehicle Status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_start"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/btn_get_vehicle_status" />
+
+        <Button
+            android:text="Get DTCs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_get_vehicle_info"
+            android:layout_toRightOf="@+id/btn_get_vehicle_status"
+            android:layout_toEndOf="@+id/btn_get_vehicle_status"
+            android:id="@+id/btn_get_dtcs" />
+
+        <Button
+            android:text="Door Unlock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_Remote_stop"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/btn_door_unlock" />
+
+        <Button
+            android:text="Remote Stop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_Remote_stop"
+            android:layout_below="@+id/btn_get_vehicle_status"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:text="Door Lock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_door_lock"
+            android:layout_alignBaseline="@+id/btn_Remote_stop"
+            android:layout_alignBottom="@+id/btn_Remote_stop"
+            android:layout_toRightOf="@+id/btn_Remote_stop"
+            android:layout_toEndOf="@+id/btn_Remote_stop" />
+
+        <Button
+            android:text="Hron"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_hron"
+            android:layout_alignBaseline="@+id/btn_door_unlock"
+            android:layout_alignBottom="@+id/btn_door_unlock"
+            android:layout_toRightOf="@+id/btn_door_unlock"
+            android:layout_toEndOf="@+id/btn_door_unlock" />
+
+        <Button
+            android:text="Light"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/btn_hron"
+            android:layout_toRightOf="@+id/btn_hron"
+            android:layout_toEndOf="@+id/btn_hron"
+            android:id="@+id/btn_Light" />
+
+        <Button
+            android:text="Reset Maintenace"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_door_unlock"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/btn_reset_maintenance" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_recieve"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/btn_reset_maintenance" />
+
+    </RelativeLayout>
+</ScrollView>
