--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,15 +45,18 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:hint="Port" />
-
-        <Button
-            android:text="connect"
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_connect"
+            android:inputType="textPersonName"
+            android:hint="VIN"
+            android:ems="10"
+            android:id="@+id/edit_vin"
             android:layout_below="@+id/edit_port"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
         <Button
             android:text="Remote Start"
@@ -159,6 +162,15 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/btn_reset_maintenance" />
+
+        <Button
+            android:text="connect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_connect"
+            android:layout_below="@+id/edit_vin"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 </ScrollView>
